# Dynamic-Token-Importance-Predictor

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: 01_collect_traces.py  02_extract_features.py  03_generate_labels.py  04_train_xgb.py  05_train_mlp.py  diag_opt_check.py  diag_position_only.py
src/token_importance/: cli.py  dataset.py  features.py  labels.py  predictor.py  trace.py
src/token_importance/models/: mlp.py  xgb.py
tests/: test_predictor.py  test_smoke.py
