[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "token-importance"
version = "0.1.0"
description = "Learned token-importance predictor for KV cache recompute decisions"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2,<3.0",
    "transformers>=4.40,<5.0",
    "accelerate>=0.30",
    "datasets>=2.18",
    "tokenizers>=0.19",
    "numpy>=1.26,<3.0",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipykernel>=6.29",
    "matplotlib>=3.8",
]

[project.scripts]
tip-collect = "token_importance.cli:collect"
tip-train = "token_importance.cli:train"
tip-eval = "token_importance.cli:evaluate"

[tool.hatch.build.targets.wheel]
packages = ["src/token_importance"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
